=== master

* Fix incorrect SQL used for inserting into a CTI subclass sharing the primary table when using the :alias option (jeremyevans)

=== 4.47.0 (2017-06-01)

* Deprecate pg_typecast_on_load plugin, only useful on deprecated do and swift adapters (jeremyevans)

* Deprecate association_autoreloading and many_to_one_pk_lookup plugins, which were made the default model behavior in Sequel 4 (jeremyevans)

* Deprecate setting invalid datasets for models unless required_valid_table = false (jeremyevans)

* Make Model.require_valid_table = true not raise for datasets where Database#schema raises an error but Dataset#columns works (jeremyevans)

* Make Database#with_server in the server_block extension accept a second argument for a different read_only shard (jeremyevans) (#1355)

* Make schema_dumper extension handle Oracle 11g XE inclusion of not null in the db_type (StevenCregan, jeremyevans) (#1351)

* Add Model.default_association_type_options for changing default association options per association type (jeremyevans)

* Add :materialized option to Database#views on PostgreSQL to return materialized views (Blargel) (#1348)

* Make defaults_setter plugin inherit custom default values when subclassing (jeremyevans)

=== 4.46.0 (2017-05-01)

* Recognize additional disconnect error on MySQL (jeremyevans)

* Deconstantize dataset SQL generation, speeding up ruby 2.3+, slowing down earlier versions (jeremyevans)

* Deprecate calling Dataset#set_graph_aliases before Dataset#graph (jeremyevans)

* Don't swallow exception if there is an exception when rolling back a transaction when using :rollback=>:always option (jeremyevans)

* Deprecate passing 2 arguments to Database#alter_table (jeremyevans)

* Deprecate passing Schema::CreateTableGenerator instance as second argument to Database#create_table (jeremyevans)

* Deprecate Database::DatasetClass as a way for getting default dataset classes for datasets (jeremyevans)
